bk_ida/gccida/c2/record_giv
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6076:1: error: unknown type name 'induction_1'
induction_1 *v, 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6084:1: error: must use 'enum' tag to refer to type 'g_types'
g_types type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6090:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6090:5: error: use of undeclared identifier 'v15'
rtx v15; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6092:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6092:5: error: use of undeclared identifier 'v18'; did you mean 'v17'?
rtx v18; // rax 
    ^~~
    v17
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6091:18: note: 'v17' declared here
 struct rtx_def *v17; // rsi 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6093:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6093:5: error: use of undeclared identifier 'v19'; did you mean 'v17'?
rtx v19; // rax 
    ^~~
    v17
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6091:18: note: 'v17' declared here
 struct rtx_def *v17; // rsi 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6094:4: error: expected ';' after expression
rtx v20; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6094:5: error: use of undeclared identifier 'v20'
rtx v20; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6095:1: error: must use 'enum' tag to refer to type 'g_types'
g_types v21; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6096:4: error: expected ';' after expression
rtx v22; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6096:5: error: use of undeclared identifier 'v22'; did you mean 'v21'?
rtx v22; // r11 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6095:9: note: 'v21' declared here
g_types v21; // r10d 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6097:6: error: use of undeclared identifier 'v23'; did you mean 'v21'?
rtx *v23; // rsi 
     ^~~
     v21
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6095:9: note: 'v21' declared here
g_types v21; // r10d 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6097:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'enum g_types')
rtx *v23; // rsi 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6115:4: error: expected ';' after expression
rtx v41; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6115:5: error: use of undeclared identifier 'v41'
rtx v41; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6128:4: error: expected ';' after expression
rtx v54; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/loop.c:6128:5: error: use of undeclared identifier 'v54'
rtx v54; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_giv/src/obj/loop.o] Error 1
